docs/style.css
/* ... */
    @media screen and (max-width: 650px) {
       
 
    }


    
    @media screen and (max-width: 450px) {
        .defaultprojects {
          padding: .1rem;
        }

   
        
    .todoheadertext, .todoheaderimage {
        margin-top: 0rem;
      }
        
        .plusbutton {
            margin-top: 2rem;
        }
        .customprojects {

            min-height: auto;
            max-height: 30vh;
      
                }

                .projectcontent {
                    height: 100vh;
                }
        .todoheadertext {
            margin-right: .1rem;
        }

        .todologo {
            grid-row: 1;
            grid-column: 1;
        }

   .projecttag {
    font-size: 1rem;
    justify-self: center;
    align-self: center;
    margin: 0;
   }
   .timeheader {
    margin: 0;
    font-size: 1.0rem;
}

   .projectnametag {
    font-size: 1rem;
    justify-self: flex-start;
    align-self: center;
    word-wrap: break-word;
    word-break: break-all;
   }

   .projectnamecontainer {}
        .modal-content {
            padding: 2rem;
        }
        .inputcontainer {
            padding: 0;
        }
    

        .columns {
            grid-column: 2;
         
       align-self: center;
        }

        .todoheadertext {
            font-size: 1.0rem;
          }
        
.todoheader {
    grid-template-rows: 1fr;
}
.timeheader {
    font-size: .9rem;
}

.buttoncontainer {
padding: 0;
}
.customprojecttitle   {


    display: flex;



}

button.customprojecttitle {
    flex-flow: column;
    flex-wrap: wrap;
    font-size: 1rem;
}




.projectbuttons {
    box-sizing: border-box;
    flex-flow: row;
padding: 2px;

}

.deleteprojectbutton {
    align-self: flex-end;
    width: auto;
}

#date {
    width: 100%;
}
    
.todocontent {
   width: 90vw;
}

.todoform > * {
    max-width: 60vw;
  }

  #date {
    max-width: 60vw;
  }

  .todocontent {
    width: 80vw;
    overflow: hidden;
  }

  .quickinfo {
    width: 90vw;
  }

#projecttitle {
    font-size: 1rem;
}

.todoheader {
    padding: .5rem;

}


    }

     @media screen and (-webkit-min-device-pixel-ratio:0)
{


 .redback {

  
  
}
}

@media screen and (max-width: 380px) {

    .customprojects {

        min-height: auto;
        max-height: 20vh;
  
            }
        }

